@@ -130,6 +130,7 @@ void poll_host(int host_id) {
 	char last_snmp_priv_passphrase[200];
 	char last_snmp_priv_protocol[6];
 	char last_snmp_context[65];
+	double poll_time = get_time_as_double();
 
 	/* reindex shortcuts to speed polling */
 	int previous_assert_failure = FALSE;
@@ -1143,6 +1144,12 @@ void poll_host(int host_id) {
 	free(host_time);
 	free(reindex);
 	free(ping);
+
+	/* record the polling time for the host */
+	poll_time = get_time_as_double() - poll_time;
+	query1[0] = '\0';
+	snprintf(query1, BUFSIZE, "UPDATE host SET polling_time='%g' WHERE id=%i", poll_time, host_id);
+	db_query(&mysql, query1);
 
 	mysql_close(&mysql);
 
